@@ -9,6 +9,7 @@ already exists.
 - Cairo support for Mlpost 0.7
 * ?pdf argument for mlpost becomes ?mode
 - -mlpost option
+- -mlpost-no-prelude option
 
 Preprocessor:
 - Print opened and pending modes in unexpected end of file errors
